RESOLVED FIXED244718
Web Inspector: Show warnings in the Font details sidebar for synthesized boldness/obliqueness
https://bugs.webkit.org/show_bug.cgi?id=244718
Summary Web Inspector: Show warnings in the Font details sidebar for synthesized bold...
Patrick Angle
Reported 2022-09-02 10:50:42 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-09-02 10:50:53 PDT
Patrick Angle
Comment 2 2022-09-02 11:38:04 PDT
EWS
Comment 3 2022-09-06 09:28:59 PDT
Committed 254188@main (805dec11f1f2): <https://commits.webkit.org/254188@main> Reviewed commits have been landed. Closing PR #3963 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.