Web Inspector: Show warnings in the Font details sidebar for synthesized boldness/obliqueness https://bugs.webkit.org/show_bug.cgi?id=244718 rdar://99496142

Reviewed by Devin Rousso.

Added test cases to: LayoutTests/inspector/css/getComputedPrimaryFontForNode.html

* LayoutTests/inspector/css/getComputedPrimaryFontForNode.html:
* LayoutTests/inspector/css/getComputedPrimaryFontForNode-expected.txt:

* Source/JavaScriptCore/inspector/protocol/CSS.json:
* Source/WebCore/inspector/agents/InspectorCSSAgent.cpp:
(WebCore::buildObjectForFont):
- Send the already existing information about font synthesis to the frontend.

* Source/WebInspectorUI/Localizations/en.lproj/localizedStrings.js:
* Source/WebInspectorUI/UserInterface/Models/Font.js:
(WI.Font.fromPayload):
(WI.Font.prototype.get synthesizedBold):
(WI.Font.prototype.get synthesizedOblique):

* Source/WebInspectorUI/UserInterface/Views/DetailsSection.css:
(.details-section > .content > .group > .row.simple:has(.warning)):
(.details-section > .content > .group > .row.simple > .warning):
* Source/WebInspectorUI/UserInterface/Views/DetailsSectionSimpleRow.js:
(WI.DetailsSectionSimpleRow):
(WI.DetailsSectionSimpleRow.prototype.get warningMessage):
(WI.DetailsSectionSimpleRow.prototype.set warningMessage):
- Add support for putting the row in a warning state.

* Source/WebInspectorUI/UserInterface/Views/FontDetailsPanel.js:
(WI.FontDetailsPanel.prototype.refresh):
(WI.FontDetailsPanel.prototype.initialLayout):
- Adopt DetailsSectionWarnableSimpleRow and show warnings when the font is synthesized in some way.

Canonical link: https://commits.webkit.org/254188@main